--- a/src/components/header/navigation/listNavigation/popupCity/popupCity.module.css
+++ b/src/components/header/navigation/listNavigation/popupCity/popupCity.module.css
@@ -17,3 +17,8 @@
 .cityMain {
     border-bottom: 1px solid #000;
 }
+
+.cityMainLight {
+    border-bottom: 1px solid #ffffff;
+    color: #fff;
+}
