--- a/src/components/header/navigation/listNavigation/popupCity/popupCity.module.css
+++ b/src/components/header/navigation/listNavigation/popupCity/popupCity.module.css
@@ -4,15 +4,19 @@
     cursor: pointer;
 }
 
+.cityPopupImgActive {
+    transform: rotate(180deg);
+}
+
 .cityPopup img:not(.geo) {
     position: absolute;
     right: -25%;
     top: 42%;
 }
 
-.city-pick-img {
+/* .city-pick-img {
     margin-right: 5px;
-}
+} */
 
 .cityMain {
     border-bottom: 1px solid #000;
