--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,3 +11,13 @@
 .headerDark {
     background-color: #00093c;
 }
+
+.indicatorHeader {
+    position: absolute;
+    top: 84%;
+    left: 0;
+    width: 8% !important;
+    background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
+    transition: left 0.3s ease;
+    opacity: 1 !important;
+}
