start all courses Page

--- a/src/components/pages/coursesPage/coursesFilter/coursesSection/coursesSection.module.css
+++ b/src/components/pages/coursesPage/coursesFilter/coursesSection/coursesSection.module.css
@@ -5,6 +5,11 @@
 
 .coursesSectionContainer {
     position: relative;
+    text-decoration: none;
+}
+
+.coursesSectionContainer:hover {
+    text-decoration: none;
 }
 
 .developCours {
