--- a/src/components/pages/home/videoBlock/videoBlock.module.css
+++ b/src/components/pages/home/videoBlock/videoBlock.module.css
@@ -32,10 +32,11 @@
     height: 100%;
 }
 
-.videoOverlay .boyImageIframe {
+.videoOverlay .posterImageFrame {
     width: 100%;
     max-width: 780px;
     height: 100%;
+    border-radius: 17px;
 }
 
 .play {
