--- a/src/components/pages/goalAll/goalAll.module.css
+++ b/src/components/pages/goalAll/goalAll.module.css
@@ -6,13 +6,14 @@
 .goalContent {
     margin-top: 10px;
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 10px;
 }
 
 .goalContent img {
-    width: 26px;
-    height: 41px;
+    width: 55px;
+    height: 50px;
     object-fit: contain;
 }
 
@@ -24,6 +25,7 @@
 }
 
 .goalContent span:last-of-type {
+    text-align: center;
     font-weight: 400;
     font-size: 14px;
 }
