--- a/src/components/pages/home/videoBlock/videoBlock.module.css
+++ b/src/components/pages/home/videoBlock/videoBlock.module.css
@@ -35,7 +35,7 @@
 .videoOverlay .posterImageFrame {
     width: 100%;
     max-width: 780px;
-    height: 100%;
+    height: 440px;
     border-radius: 17px;
 }
 
