--- a/src/components/pages/coursesPage/anyoneCourse/coursePageParts/couches/couches.module.css
+++ b/src/components/pages/coursesPage/anyoneCourse/coursePageParts/couches/couches.module.css
@@ -123,6 +123,9 @@
     img {
         position: relative;
         z-index: 2;
+        width: 100%;
+        border-radius: 50%;
+        object-fit: cover;
     }
 }
 
