--- a/src/components/pages/eventsPage/eventsSection/eventsRow/eventsRow.module.css
+++ b/src/components/pages/eventsPage/eventsSection/eventsRow/eventsRow.module.css
@@ -1,6 +1,11 @@
 .eventsSections {
     display: flex;
     gap: 20px;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
 }
 
 .gradientContainer {
