--- a/src/components/pages/eventsPage/anyoneEventsPage/anyoneEventsGoals/anyoneEventsGoals.module.css
+++ b/src/components/pages/eventsPage/anyoneEventsPage/anyoneEventsGoals/anyoneEventsGoals.module.css
@@ -4,9 +4,9 @@
     margin-bottom: 160px;
 }
 
-.chessGoal {
+.goalContainer {
     display: flex;
-    gap: 40px;
+    gap: 80px;
     align-items: flex-start;
     margin-left: -100px;
 }
