finish about page

--- a/src/components/pages/coursesPage/anyoneCourse/coursePageParts/aboutPart/aboutPart.module.css
+++ b/src/components/pages/coursesPage/anyoneCourse/coursePageParts/aboutPart/aboutPart.module.css
@@ -3,9 +3,15 @@
     position: relative;
 }
 
-.chessGoal {
+.chessGoal,
+.aboutGoal {
     margin-left: -170px;
     display: flex;
     gap: 50px;
     align-items: flex-start;
+}
+
+.aboutGoal {
+    margin-left: -100px;
+    gap: 130px;
 }
