--- a/src/components/pages/home/welcomeContainer/welcome/welcomeHomepage.module.css
+++ b/src/components/pages/home/welcomeContainer/welcome/welcomeHomepage.module.css
@@ -1,12 +1,11 @@
 .welcomeInfoContent {
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
     gap: 25px;
 
     img {
-        width: 100%;
-        max-width: 60px;
-        height: 60px;
+        max-height: 50px;
     }
 
     p {
@@ -14,6 +13,14 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 144%;
+        color: #000;
+    }
+
+    span {
+        font-family: var(--font-family);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
         color: #000;
     }
 }
