--- a/src/components/pages/home/actions/sections/section/testHome/testCardHome.module.css
+++ b/src/components/pages/home/actions/sections/section/testHome/testCardHome.module.css
@@ -1,22 +1,3 @@
-.test h4 {
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 108%;
-    text-align: center;
-    color: #000;
-}
-
-.test p {
-    text-align: start;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    color: #333;
-    margin: 0;
-}
-
 .test {
     display: flex;
     align-items: center;
@@ -29,6 +10,30 @@
     max-height: 220px;
     padding: 10px 40px;
     cursor: pointer;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: none;
+    }
+
+    h4 {
+        font-family: var(--font-family);
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 108%;
+        text-align: center;
+        color: #000;
+    }
+
+    p {
+        text-align: start;
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        color: #333;
+        margin: 0;
+    }
 }
 
 .textTest {
@@ -36,8 +41,8 @@
     flex-direction: column;
     gap: 20px;
     margin-bottom: 5px;
-}
 
-.textTest h4 {
-    text-align: start;
+    h4 {
+        text-align: start;
+    }
 }
