--- a/src/components/pages/coursesPage/anyoneCourse/coursePageParts/aboutPart/aboutPart.module.css
+++ b/src/components/pages/coursesPage/anyoneCourse/coursePageParts/aboutPart/aboutPart.module.css
@@ -1,13 +1,14 @@
-.aboutChessCours {
+.aboutCours {
     margin-top: 70px;
     position: relative;
+    margin-bottom: 160px;
 }
 
-.chessGoal,
+.goal,
 .aboutGoal {
-    margin-left: -170px;
+    margin-left: -135px;
     display: flex;
-    gap: 50px;
+    gap: 60px;
     align-items: flex-start;
 }
 
