--- a/src/components/pages/goalAll/goalAll.module.css
+++ b/src/components/pages/goalAll/goalAll.module.css
@@ -38,9 +38,14 @@
     gap: 10px;
 
     img {
+        width: 50px;
+        height: 50px;
+        object-fit: contain;
+    }
+
+    .aboutAcademyImages {
         width: 26px;
         height: 41px;
-        object-fit: contain;
     }
 
     span {
