--- a/src/components/pages/home/headerBig/headerImg/headerImg.module.css
+++ b/src/components/pages/home/headerBig/headerImg/headerImg.module.css
@@ -2,3 +2,29 @@
     position: absolute;
     z-index: 1;
 }
+
+.cross {
+    clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 81%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+    width: 180px;
+    height: 150px;
+    border-radius: 60%;
+    object-fit: cover;
+    object-position: right;
+}
+
+.circle {
+    clip-path: circle(50% at 50% 50%);
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.triangle {
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    object-position: center;
+    z-index: 0;
+}
