--- a/src/components/pages/careerPage/employmentPath/employmentPath.module.css
+++ b/src/components/pages/careerPage/employmentPath/employmentPath.module.css
@@ -3,4 +3,65 @@
     height: 480px;
     margin-top: 100px;
     margin-bottom: 20px;
+    padding: 40px;
+}
+
+.employmentPathContent {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+
+    h2 {
+        font-family: var(--font-family);
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 94%;
+        color: #fff;
+    }
+}
+
+.pathsContainer {
+    display: flex;
+    gap: 30px;
+    align-items: flex-end;
+}
+
+.path {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    background-size: 100px;
+    background-repeat: no-repeat;
+    background-position: 48% 75%;
+
+    img {
+        position: relative;
+        width: 100%;
+        max-width: 80px;
+    }
+
+    p {
+        position: relative;
+        color: #fff;
+        font-family: var(--font-family);
+    }
+}
+
+.questionButton {
+    background-color: #f7941d;
+    border-radius: 5px;
+    width: 100%;
+    max-width: 285px;
+    height: 50px;
+    line-height: 48px;
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 14px;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
 }
