--- a/src/components/pages/home/actions/sections/openDoor/openDoor.module.css
+++ b/src/components/pages/home/actions/sections/openDoor/openDoor.module.css
@@ -1,3 +1,11 @@
+.buttonDayOfContainer {
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: none;
+    }
+}
+
 .dayOfOpenDoor {
     margin-top: 60px;
     display: flex;
@@ -55,7 +63,8 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 186%;
-    color: #000
+    color: #000;
+    text-decoration: none;
 }
 
 .buttonDayOf svg {
