--- a/src/components/pages/home/actions/sections/openDoor/svgDayOf/svgDayOf.module.css
+++ b/src/components/pages/home/actions/sections/openDoor/svgDayOf/svgDayOf.module.css
@@ -2,5 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+
+    span {
+        font-size: 40px;
+        font-weight: 700;
+        color: #000;
+    }
 }
